# GhostPen

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.agents/: TODO.md  architect.md  architecture.md  implementer.md  plan.md  ui-review.md
.agents/add-an-ocr-image-text-extraction/: TODO.md  architecture.md  brief.md  fixes.md  implementation.md  plan.md  review-fable.md  review-opencode-go-glm-5.2.md  review-opus.md
.agents/proposals/: command-palette.md  glass-hud.md  writing-tools.md
.chglog/: CHANGELOG.tpl.md  config.yml
.github/workflows/: pr-build.yml  release.yml
scripts/: install-deps.sh  install-local.sh  tauri.mjs
src/: App.tsx  Captions.tsx  Dictation.tsx  LevelBar.tsx  Menu.tsx  Playground.tsx  Settings.tsx  api.ts  diff.ts  icons.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  config.rs  dictation.rs  image_util.rs  lib.rs  main.rs
src-tauri/src/captions/: audio.rs  mod.rs  model.rs  pool.rs  server.rs  transcribe.rs
src-tauri/src/pal/: clipboard.rs  input.rs  mod.rs
