[package]
name = "ghostpen"
version = "0.1.1"
description = "GhostPen — AI text editing overlay"
authors = ["GhostPen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ghostpen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-store = "2.4.3"
tauri-plugin-single-instance = "2.4.2"
enigo = "0.6.1"
arboard = "3.6.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1.52.3", features = ["full"] }
dirs = "5"

# --- System-audio captions (ADR-008) -------------------------------------------------
# Opt-in: gated behind the `captions` feature so the default build (and the 6-target
# release CI) adds NO new system dependencies. Enabling it pulls in cpal (loopback audio
# capture; needs ALSA on Linux) and whisper-rs (bundled whisper.cpp; needs a C/C++ toolchain
# + libclang for bindgen). Build with: `cargo build --features captions` /
# `npm run tauri build -- --features captions`.
cpal = { version = "0.15", optional = true }
whisper-rs = { version = "0.16", optional = true }

[features]
default = []
# On-device captions: cpal loopback capture + local whisper.cpp transcription (CPU backend).
captions = ["dep:cpal", "dep:whisper-rs"]
# GPU-accelerated whisper. Each implies `captions` and swaps whisper.cpp's compute backend.
# The `scripts/tauri.mjs` wrapper auto-picks cuda > vulkan > cpu based on what's installed
# (and sets the CUDA toolkit env for the build). Pick explicitly with GHOSTPEN_CAPTIONS_GPU.
#   - cuda:   needs the CUDA toolkit (nvcc) + an NVIDIA GPU. Fastest.
#   - vulkan: needs glslc/shaderc + the Vulkan loader. Portable (NVIDIA *and* AMD).
captions-cuda = ["captions", "whisper-rs/cuda"]
captions-vulkan = ["captions", "whisper-rs/vulkan"]
#   - metal:  macOS GPU (built into the OS; no extra deps). Includes a CPU fallback.
captions-metal = ["captions", "whisper-rs/metal"]

# Native Wayland clipboard (read + persistent serve). Linux-only; pure Rust, no wl-copy CLI.
# arboard is X11-only here and loses writes through the XWayland bridge (ADR-002 revisited).
[target.'cfg(target_os = "linux")'.dependencies]
wl-clipboard-rs = "0.9.3"

